# taxcount

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  deny.toml
.github/workflows/: rust.yml
crates/esploda/: Cargo.toml
crates/esploda/examples/: get_block_ureq.rs  get_blocks_cli.rs  get_tx_cli.rs  get_tx_reqwest.rs  get_tx_ureq.rs
crates/esploda/src/: bitcoind.rs  esplora.rs  lib.rs
crates/esploda/src/bitcoind/: tx.rs
crates/esploda/src/esplora/: tx.rs
crates/fett/: Cargo.toml
crates/fett/src/: lib.rs  loom_tests.rs  sync.rs
crates/gitver/: Cargo.toml
crates/gitver/src/: codegen.rs  lib.rs  pathspec_hardcodes.rs
doc/: CapGainsWorksheet_diagrams.mermaid  notes-on-margin.md
fixtures/wallet/: README.md  create_blocks.sh  create_tx.sh  electrum_testnet_a.ron  mock_client.ron
references/electrum-testnet/: README.md  history-testnet-wallet-PJFargo-20231128.csv  history-testnet-wallet-a-2023.csv  history-testnet-wallet-b-2023.csv  history-testnet-wallet-b-2024.csv  history-testnet-wallet-icecream-2023.csv  history-testnet-wallet-icecream-2024.csv  kraken-ledgers.csv  kraken-trades.csv  testnet-tx-tags-walletonly.csv  testnet-tx-tags.csv  testnet-wallet-PJFargo-20231128  testnet-wallet-a-20231128  testnet-wallet-b-20231128  testnet-wallet-icecream-20231128
references/exchange-rates-db/daily-vwap/: 2012-bitstamp-btcusd.ron  2013-bitstamp-btcusd.ron  2014-bitstamp-btcusd.ron  2015-bitstamp-btcusd.ron  2016-bitstamp-btcusd.ron  2017-bitstamp-btcusd.ron  2018-kraken-btcusd.ron  2018-kraken-ethusd.ron  2019-kraken-btcusd.ron  2019-kraken-ethusd.ron  2019-kraken-usdtusd.ron  2019-yahoo-eurusd.ron  2020-kraken-btcusd.ron  2020-kraken-ethusd.ron  2020-kraken-usdtusd.ron  2020-yahoo-eurusd.ron  2021-kraken-btcusd.ron  2021-kraken-ethusd.ron  2021-kraken-usdtusd.ron  2021-yahoo-eurusd.ron  2022-kraken-btcusd.ron  2022-kraken-ethusd.ron  2022-kraken-usdcusd.ron  2022-kraken-usdtusd.ron  2022-yahoo-eurusd.ron  2023-kraken-btcusd.ron  2023-kraken-ethusd.ron  2023-kraken-usdcusd.ron  2023-kraken-usdtusd.ron  2023-yahoo-chfusd.ron  2023-yahoo-eurusd.ron  2023-yahoo-jpyusd.ron  2024-fred-chfusd.ron  2024-fred-eurusd.ron  2024-fred-jpyusd.ron  2024-kraken-btcusd.ron  2024-kraken-ethusd.ron  2024-kraken-ethwusd.ron  2024-kraken-usdcusd.ron  2024-kraken-usdtusd.ron
references/ledgerlive-testnet-wallets/: README.txt  kraken-ledgers.csv  ledgerlive-history-testnet-wallet-20231128.csv  testnet-tx-tags.csv
references/mock-testnet/: README.txt  mock-testnet-tx-tags.csv  mock-testnet-wallet.csv
src/: basis.rs  client.rs  errors.rs  imports.rs  lib.rs  main.rs  model.rs  util.rs
src/basis/: bucket.rs  lifecycle.rs  lookup.rs  poolasset.rs  split.rs
src/client/: bitcoind.rs  esplora.rs
src/imports/: address.rs  kraken.rs  wallet.rs
src/imports/wallet/: electrum.rs  ledgerlive.rs
src/model/: blockchain.rs  checkpoint.rs  constants.rs  events.rs  exchange.rs  exchange_rate.rs  gains.rs  kraken_amount.rs  ledgers.rs  pairs.rs  stats.rs
src/model/blockchain/: account.rs  utxo.rs
src/model/gains/: tests.rs
src/model/ledgers/: parsed.rs  rows.rs
src/model/ledgers/parsed/: prop_tests.rs
src/util/: fifo.rs  year_ext.rs
supply-chain/: config.toml
tools/bootstrap-checkpoint/: Cargo.toml
tools/bootstrap-checkpoint/src/: main.rs
tools/kraken-export-fix/: Cargo.toml
tools/kraken-export-fix/src/: main.rs
tools/ohlc-ness/: Cargo.toml  README.md  update-year.sh
tools/ohlc-ness/src/: consts.rs  fetch.rs  lib.rs  main.rs  modes.rs
tools/query-exchange-rates/: Cargo.toml
tools/query-exchange-rates/src/: main.rs
